--- a/index.html
+++ b/index.html
@@ -1,33 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<link rel="stylesheet" href="css/style.css">
-	<link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Montserrat:400,700&display=swap" rel="stylesheet">
-	<title>MoGo</title>
-</head>
-<body>
-
-<header class="header">
-	<div class="container">
-		<div class="header__inner">
-			<div class="header__logo">MoGo</div>
-
-			<nav class="nav">
-				<a class="nav__link" href="#">About</a>
-				<a class="nav__link" href="#">Service</a>
-				<a class="nav__link" href="#">Block</a>
-				<a class="nav__link" href="#">Work</a>
-				<a class="nav__link" href="#">Contact</a>
-			</nav>
+	<head>
+		<meta charset="UTF-8">
+		<link rel="stylesheet" href="css/style.css">
+		<link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Montserrat:400,700&display=swap" rel="stylesheet">
+		<title>MoGo</title>
+	</head>
+	<body>
+		<header class="header">
+			<div class="container">
+				<div class="header__inner">
+					<div class="header__logo">MoGo</div>
+					<nav class="nav">
+						<a class="nav__link" href="#">About</a>
+						<a class="nav__link" href="#">Service</a>
+						<a class="nav__link" href="#">Block</a>
+						<a class="nav__link" href="#">Work</a>
+						<a class="nav__link" href="#">Contact</a>
+					</nav>
+				</div>
+			</div>
+		</header>
+		<div class="intro">
+			<div class="container">
+				<div class="intro__inner">
+					<h2 class="intro__suptitle">Creative Template</h2>
+					<h1 class="intro__title">WELKOME TO MOGO</h1>
+					<a class="btn" href="#">Learn More</a>
+				</div>
+				<div class="slider">
+					<div class="slider__item">
+						<span class="slider__number">01</span>
+						Intro
+					</div>
+					<div class="slider__item">
+						<span class="slider__number">02</span>
+						Work
+					</div>
+					<div class="slider__item">
+						<span class="slider__number">03</span>
+						About
+					</div>
+					<div class="slider__item">
+						<span class="slider__number">04</span>
+						Contacts
+					</div>
+				</div>
+			</div>
 		</div>
-	</div>
-</header>
-
-<div class="intro">
-	<div class="container">
-	</div>
-</div>
-	
-</body>
+		
+	</body>
 </html>
