--- a/index.html
+++ b/index.html
@@ -29,20 +29,20 @@
 					<a class="btn" href="#">Learn More</a>
 				</div>
 				<div class="slider">
-					<div class="slider__item">
-						<span class="slider__number">01</span>
+					<div class="slider__item active">
+						<span class="slider__num">01</span>
 						Intro
 					</div>
 					<div class="slider__item">
-						<span class="slider__number">02</span>
+						<span class="slider__num">02</span>
 						Work
 					</div>
 					<div class="slider__item">
-						<span class="slider__number">03</span>
+						<span class="slider__num">03</span>
 						About
 					</div>
 					<div class="slider__item">
-						<span class="slider__number">04</span>
+						<span class="slider__num">04</span>
 						Contacts
 					</div>
 				</div>
